--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <title>Only Tasty</title>
 </head>
 <body>
+    <header>
+        <img alt="" src="image/LOGO/OnlyTasty">
+        <button>+Add the recipe</button>
+        <div class="search-container">
+            <form action="/action_page.php">
+              <input type="text" placeholder="Search.." name="search">
+              <button type="submit"><i class="fa fa-search"></i></button>
+            </form>
+          </div>
+          <a href="#">Sign in</a>
+          <a href="#">Sign out</a>
+    </header>
+    <nav>   
+        <ul class="nav_ul" id="nav_ul">
+            <li><a class="here" href="index.html">Home</a></li>
+            <li><a href="#">World cousine</a></li>
+            <li><a href="#">Holidays & events</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Video and podcast</a></li>
+        </ul>
+    </nav>
     
 </body>
 </html>
