--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Only Tasty</title>
 </head>
 <body>
     <header>
-        <img alt="" src="image/LOGO/OnlyTasty">
-        <button>+Add the recipe</button>
+        <h1>ONLY <strong>TASTY</strong></h1>
+        <div class="search-div">        <button>+Add the recipe</button>
         <div class="search-container">
             <form action="/action_page.php">
               <input type="text" placeholder="Search.." name="search">
@@ -18,16 +19,20 @@
           </div>
           <a href="#">Sign in</a>
           <a href="#">Sign out</a>
+        </div>
+        <div></div>
+        <nav>   
+            <ul class="nav_ul" id="nav_ul">
+                <li><a class="here" href="index.html">Home</a></li>
+                <li><a href="#">World cousine</a></li>
+                <li><a href="#">Holidays & events</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Video and podcast</a></li>
+            </ul>
+        </nav>
+
     </header>
-    <nav>   
-        <ul class="nav_ul" id="nav_ul">
-            <li><a class="here" href="index.html">Home</a></li>
-            <li><a href="#">World cousine</a></li>
-            <li><a href="#">Holidays & events</a></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Video and podcast</a></li>
-        </ul>
-    </nav>
+ 
     
 </body>
 </html>
