--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 <body>
     <header>
         <h1>ONLY <strong>TASTY</strong></h1>
-        <div class="search-div">        <button>+Add the recipe</button>
+        <div class="search-div">        
+        <button class="add-recipe">+Add the recipe</button>
         <div class="search-container">
             <form action="/action_page.php">
               <input type="text" placeholder="Search.." name="search">
               <button type="submit"><i class="fa fa-search"></i></button>
             </form>
           </div>
-          <a href="#">Sign in</a>
-          <a href="#">Sign out</a>
+          <a class="signInOut" href="#">Sign in</a>
+          <a class="signInOut" href="#">Sign out</a>
         </div>
         <div></div>
         <nav>   
