--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,22 +8,23 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Only Tasty</title>
 </head>
+
 <body>
     <header>
         <h1>ONLY <strong>TASTY</strong></h1>
-        <div class="search-div">        
-        <button class="add-recipe">+Add the recipe</button>
-        <div class="search-container">
-            <form action="/action_page.php">
-              <input type="text" placeholder="Search.." name="search">
-              <button type="submit"><i class="fa fa-search"></i></button>
-            </form>
-          </div>
-          <a class="signInOut" href="#">Sign in</a>
-          <a class="signInOut" href="#">Sign out</a>
+        <div class="search-div">
+            <button class="add-recipe">+Add the recipe</button>
+            <div class="search-container">
+                <form action="/action_page.php">
+                    <input type="text" placeholder="Search.." name="search">
+                    <button type="submit"><i class="fa fa-search"></i></button>
+                </form>
+            </div>
+            <a class="signInOut" href="#">Sign in</a>
+            <a class="signInOut" href="#">Sign out</a>
         </div>
         <div></div>
-        <nav>   
+        <nav>
             <ul class="nav_ul" id="nav_ul">
                 <li><a class="here" href="index.html">Home</a></li>
                 <li><a href="#">World cousine</a></li>
@@ -33,7 +35,60 @@
         </nav>
 
     </header>
- 
-    
+
+
+
+    <footer>
+        <div class="followUs">
+            <div>
+            <ul>
+            <li><a href="#"><img src="imagesnew/ICONS/FACEBOOK.svg" alt="Facebook"></a>
+            <p>Only Taste</p></li>
+            <li><a href="#"><img src="imagesnew/ICONS/INSTAGRAM.png" alt="Instagram"></a>
+            <p>Only Taste</p></li>
+            <li><a href="#"><img src="imagesnew/ICONS/INSTAGRAM.png" alt="YouTube"></a>
+            <p>Only Taste</p></li>
+        </ul>
+            </div>
+            <div>
+                <ul>
+            <li><a href="#"><img src="imagesnew/ICONS/INSTAGRAM.png" alt="Pinterest"></a>
+            <p>Only Taste</p></li>
+            <li><a href="#"><img src="imagesnew/ICONS/INSTAGRAM.png" alt="Twitter"></a>
+            <p>Only Taste</p></li>
+        </ul>
+        </div>
+        
+        </div>
+        <div class="footer-logo">
+            <h3>World recipe collection</h3>
+            <h1>ONLY TASTY</h1>
+            <button>+Add the recipe</button>
+        </div>
+        <div class="links">
+            <div>
+                <ul>
+                <li><a href="#">ABOUT US</a></li>
+                <li><a href="#">PRESS</a></li>
+                <li><a href="#">LEGAL</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">CONTACT US</a></li>
+            </ul>
+            </div>
+            <div>
+                <ul>
+                <li><a href="#">FOOD BLOG OF THE DAY</a></li>
+                <li><a href="#">WINE BLOG OF THE DAY</a></li>
+                <li><a href="#">USER GUIDE</a></li>
+                <li><a href="#">ADVERTORIAL</a></li>
+                <li><a href="#">ADVERTISE</a></li>
+                </ul>
+            </div>
+
+        </div>
+    </footer>
+
+
 </body>
+
 </html>
