--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
     <header>
-        <h1>ONLY <strong>TASTY</strong></h1>
+        <h1>ONLY <span>TASTY</span></h1>
         <div class="search-div">
             <button class="add-recipe">+Add the recipe</button>
             <div class="search-container">
                 <form action="/action_page.php">
                     <input type="text" placeholder="Search.." name="search">
-                    <button type="submit"><i class="fa fa-search"></i></button>
+                    <button type="submit"><img src="IMAGES/icons/searchbar.svg" alt=""></button>
                 </form>
             </div>
             <a class="signInOut" href="#">Sign in</a>
@@ -27,8 +27,8 @@
         <nav>
             <ul class="nav_ul" id="nav_ul">
                 <li><a class="here" href="index.html">Home</a></li>
-                <li><a href="#">World cousine</a></li>
-                <li><a href="#">Holidays & events</a></li>
+                <li><a href="worldwideCousine.html">World cousine</a></li>
+                <li><a href="holidays.html">Holidays & events</a></li>
                 <li><a href="#">News</a></li>
                 <li><a href="#">Video and podcast</a></li>
             </ul>
@@ -48,6 +48,10 @@
             <p>Only Taste</p></li>
             <li><a href="#"><img src="imagesnew/ICONS/INSTAGRAM.png" alt="YouTube"></a>
             <p>Only Taste</p></li>
+
+            <p>&copy; 2010 - 2022 ONLY TASTY website, NET
+            </p>
+
         </ul>
             </div>
             <div>
@@ -62,8 +66,8 @@
         </div>
         <div class="footer-logo">
             <h3>World recipe collection</h3>
-            <h1>ONLY TASTY</h1>
-            <button>+Add the recipe</button>
+            <h1>ONLY <span>TASTY</span></h1>
+            <button class="add-recipe-button">+Add the recipe</button>
         </div>
         <div class="links">
             <div>
@@ -86,6 +90,7 @@
             </div>
 
         </div>
+
     </footer>
 
 
