--- a/worldwideCousine.html
+++ b/worldwideCousine.html
@@ -26,9 +26,9 @@
         <div></div>
         <nav>
             <ul class="nav_ul" id="nav_ul">
-                <li><a class="here" href="index.html">Home</a></li>
-                <li><a href="#">World cousine</a></li>
-                <li><a href="#">Holidays & events</a></li>
+                <li><a  href="index.html">Home</a></li>
+                <li><a class="here" href="worldwideCousine.html">World cousine</a></li>
+                <li><a href="holidays.html">Holidays & events</a></li>
                 <li><a href="#">News</a></li>
                 <li><a href="#">Video and podcast</a></li>
             </ul>
@@ -52,6 +52,7 @@
     <span>DESERT</span>
 
 </section>
+    </section>
     <footer>
         <div class="followUs">
             <div>
