added section for api content
unsuccesfull try of displaying content

--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
 
     </header>
 
-
+    <section class="intro">
+        <h1>GET THE <span>MOTIVATION</span> YOU NEED</h1>
+        <div class="pesto"></div>
+        <div class="addrecipe"></div>
+    </section>
 
     <footer>
         <div class="followUs">
