--- a/news.html
+++ b/news.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <script src="script/java.js" defer></script>
     <title>Only Tasty</title>
 </head>
 
@@ -27,21 +26,92 @@
         <div></div>
         <nav>
             <ul class="nav_ul" id="nav_ul">
-                <li><a class="here" href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="worldwideCousine.html">World cousine</a></li>
                 <li><a href="holidays.html">Holidays & events</a></li>
-                <li><a href="news.html">News</a></li>
+                <li><a class="here" href="news.html">News</a></li>
                 <li><a href="#">Video and podcast</a></li>
             </ul>
         </nav>
 
     </header>
-
-    <section class="intro">
-        <h1>GET THE <span>MOTIVATION</span> YOU NEED</h1>
-        <div class="pesto"></div>
-        <div class="addrecipe"></div>
+    
+    <section class="news 1">
+        <h4>Funny & Weird</h4>
+        <div>
+            <p>Great Ways to Save Money On your food prep this year</p>
+            <img src="IMAGES/32796603883_eb6ac8e27d_o" alt="THANKSGIVING">
+        </div>
+        <div>
+            <p>How to get the most out of a farmer's market</p>
+            <img src="IMAGES/40265302924_c5407927dc_z.jpg" alt="Market">
+        </div>
+        <div>
+            <p>How to get the most out of a farmer's market</p>
+            <img src="IMAGES/kitchen-81644_640.jpg" alt="kitchen-81644_640"> 
+        </div>
     </section>
+    <section class="news 2">
+        <h4>Funny & Weird</h4>
+        <div>
+            <p>Great Ways to Save Money On your food prep this year</p>
+            <img src="IMAGES/32796603883_eb6ac8e27d_o" alt="THANKSGIVING">
+        </div>
+        <div>
+            <p>How to get the most out of a farmer's market</p>
+            <img src="IMAGES/40265302924_c5407927dc_z.jpg" alt="Market">
+        </div>
+        <div>
+            <p>How to get the most out of a farmer's market</p>
+            <img src="IMAGES/kitchen-81644_640.jpg" alt="kitchen-81644_640"> 
+        </div>
+    </section>
+    <section class="news 3">
+        <h4>Funny & Weird</h4>
+        <div>
+            <p>Great Ways to Save Money On your food prep this year</p>
+            <img src="IMAGES/32796603883_eb6ac8e27d_o" alt="THANKSGIVING">
+        </div>
+        <div>
+            <p>How to get the most out of a farmer's market</p>
+            <img src="IMAGES/40265302924_c5407927dc_z.jpg" alt="Market">
+        </div>
+        <div>
+            <p>How to get the most out of a farmer's market</p>
+            <img src="IMAGES/kitchen-81644_640.jpg" alt="kitchen-81644_640"> 
+        </div>
+    </section>
+    <section class="news 4">
+        <h4>Funny & Weird</h4>
+        <div>
+            <p>Great Ways to Save Money On your food prep this year</p>
+            <img src="IMAGES/32796603883_eb6ac8e27d_o" alt="THANKSGIVING">
+        </div>
+        <div>
+            <p>How to get the most out of a farmer's market</p>
+            <img src="IMAGES/40265302924_c5407927dc_z.jpg" alt="Market">
+        </div>
+        <div>
+            <p>How to get the most out of a farmer's market</p>
+            <img src="IMAGES/kitchen-81644_640.jpg" alt="kitchen-81644_640"> 
+        </div>
+    </section>
+    <section class="news 5">
+        <h4>Funny & Weird</h4>
+        <div>
+            <p>Great Ways to Save Money On your food prep this year</p>
+            <img src="IMAGES/32796603883_eb6ac8e27d_o" alt="THANKSGIVING">
+        </div>
+        <div>
+            <p>How to get the most out of a farmer's market</p>
+            <img src="IMAGES/40265302924_c5407927dc_z.jpg" alt="Market">
+        </div>
+        <div>
+            <p>How to get the most out of a farmer's market</p>
+            <img src="IMAGES/kitchen-81644_640.jpg" alt="kitchen-81644_640"> 
+        </div>
+    </section>
+
 
 
     <footer>
