--- a/easter.html
+++ b/easter.html
@@ -29,7 +29,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="worldwideCousine.html">World cousine</a></li>
                 <li><a class="here" href="holidays.html">Holidays & events</a></li>
-                <li><a href="#">News</a></li>
+                <li><a href="news.html">News</a></li>
                 <li><a href="#">Video and podcast</a></li>
             </ul>
         </nav>
